# XSYNC

./: CMakeLists.txt  README.md  XSyncClient  XSyncClient.cpp  XSyncServer  XSyncServer.cpp
.github/workflows/: build.yml
